# Todo-AI-Chatbot

./: .gitignore  CLAUDE.md  package-lock.json  package.json  run_db_test.py  test_auth.py  test_communication.py  test_db_connection.py  verify_implementation.py  vitest.config.ts  vitest.setup.ts
.claude/: settings.local.json
.claude/agents/: backend-sub-agent.md  better-auth-handler.md  frontend-sub-agent.md  spec-writer.md
.claude/skills/: better-auth.skill
.specify/memory/: constitution.md
backend/: main.py  pyproject.toml  test_agent_integration.py  test_schema.py  tmpclaude-c28c-cwd
backend/src/: config.py  main.py
backend/src/api/: auth.py  chat.py  mcp.py  tasks.py  users.py
backend/src/db/: __init__.py  models.py  session.py
backend/src/dependencies/: auth.py
backend/src/mcp/: server.py  tools.py
backend/src/middleware/: auth.py  rate_limit.py
backend/src/models/: conversation.py  message.py  task.py  user.py
backend/src/services/: auth.py  conversation_service.py  data.py  database.py  logging_service.py  task_service.py
backend/src/todo_agents/: agent.py  llm_config.py  runner.py  todo_agent_prompt.py
backend/tests/contract/: test_chat_api.py
backend/tests/integration/: test_task_creation.py
backend/tests/unit/: test_add_task_tool.py  test_list_tasks_tool.py
frontend/: drizzle.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: FloatingChatButton.tsx  GlobalChatProvider.tsx  Navigation.tsx  TaskCard.tsx  TaskForm.tsx
utils/: retryUtils.test.ts  retryUtils.ts
(+141 files in other folders)
